--- a/post1.html
+++ b/post1.html
@@ -62,8 +62,8 @@
             <h1>The ring bridges the most other rings is the Max ring</h1>
             <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
             <span class="meta">Posted by
-              <a href="#">Start Bootstrap</a>
-              on August 24, 2019</span>
+              <a href="#">Quantao</a>
+              on December 07, 2020</span>
           </div>
         </div>
       </div>
@@ -78,8 +78,11 @@
           <p>Morpine's structure was determined in 1925, the first patent of total synthesis of it showed up in 1952, followed by several other methods.Morphine means a lot to the whole society, it can reduce pain but also cause addition, it is 
 a fansnation molecule in many ways. But when we talk about the way to get it by total synthesis, what is a good way to break down, especially what should be the first disconnection when we do the retro synthesis analysis ?<p/>
 
-![](/images/morphine0.png)
-iamge from wikipedia
+<a href="#">
+            <img class="img-fluid" src="img/morphine0.png" alt="">
+            </a>
+
+ image from wikipedia
 
 <p>It seems there are already some key principle all chemsits agreen on, like make good use of symmetry, since a lot highly complexed structure acturally comprised of
 two or three exact the same subunit. Also some one would recommend there are certain patten to be a "retron" like the 1,3 positioned N/O reminds people this could be
@@ -95,37 +98,42 @@ similar if not exactly the same.<p/>
 
 Go to DrugBank, type "morphine" and find the 3-D coordinate.
 
-![](/images/morphine1.png) 
+
+<a href="#">
+            <img class="img-fluid" src="img/morphine1.png" alt="">
+            </a>
 
 <p>click the download as MOL file, then your computer may be able to download directly as a file, if it shows instead as a web page like below, you could just copy the whole content and paste it to a newly created file called "morphine.mol" (touch morphine.mol), or creat morphine.txt if you use Windows and past it to the txt
 file. <p/>
 
-![](/images/morphine2.png) 
 
 <p>Go back to the MaxBridge web site, use browse to upload the morphine.mol file, then click "submit" in the bottom, and wait for 1-5 minites while the calculation happening. <p/>
 
-![](/images/morphine3.png) 
+<a href="#">
+            <img class="img-fluid" src="img/morphine3.png" alt="">
+            </a>
 
-![](/images/morphine4.png)
+<a href="#">
+            <img class="img-fluid" src="img/morphine4.png" alt="">
+            </a>
 
 <p>The result will be like the next image, saying that the input file actually is a 2D structure and the web automaticly convert it to 3D before the real analysis (upload 3D structure derived from ChemDarw 3D or any other software can produce such fiel if possible). 5 rings are high lighted as purple or gray, with the first one being the "Max Ring", that the ring bridges the most other rings !
 The first and second ring are listed below. The purple atoms are bridged atoms, the gray ones are non-bridged, so from an retrosynthetic perspective, the bridged atoms should be put on more attention when try to break the whole morphine structure.<p/>
-![](/images/morphine5.png)
-![](/images/morphine6.png)
+
+<a href="#">
+            <img class="img-fluid" src="img/morphine5.png" alt="">
+            </a>
+
+<a href="#">
+            <img class="img-fluid" src="img/morphine6.png" alt="">
+            </a>
 
  <p>The take away home message here, is simple, break down the Max Ring!
 For more reading about the Max Ring strategy, one can search the group page of Richmond Sarpong, UC Berkeley,https://sarponggroup.com <p/>
 
-
-
- 
 </p>
 
           
-
-          <p>Placeholder text by
-            <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by
-            <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
         </div>
       </div>
     </div>
