--- a/post3.html
+++ b/post3.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>Quantao's blog - Start Bootstrap Theme</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -62,8 +62,8 @@
             <h1>CBP and GSR</h1>
             <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
             <span class="meta">Posted by
-              <a href="#">Start Bootstrap</a>
-              on August 24, 2019</span>
+              <a href="#">Quantao</a>
+              on December 05, 2020</span>
           </div>
         </div>
       </div>
@@ -75,23 +75,22 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Two simple stereochemistry drawing tips are provided here. You will be surprised how easy it is to apply these methods drawingthe same molecule in so many ways!The next image shows many molecules, they all to mean the same L-lysine. By appling two tips called CBP and GSR, you can do this easily too.
+          <p>Two simple stereochemistry drawing tips are provided here. You will be surprised how easy it is to apply these methods drawingthe same molecule in so many ways!The next image shows many molecules, they all to mean the same L-lysine. By appling two tips called CBP and GSR, you can do this easily too.<p/>
 
-![](/images/chiral1.png)
-![](/images/chiral2.png)
 
-Though the chiral center of carbon 2 in last image keeps all the time, 3 position changed acturally, so you should be careful if two chiral
-center are adjacent when using CBP and GSR. 
+<a href="#">
+            <img class="img-fluid" src="img/chiral1.png" alt="">
+            </a>
+
+<a href="#">
+            <img class="img-fluid" src="img/chiral2.png" alt="">
+            </a>
+
+<p>Though the chiral center of carbon 2 in last image keeps all the time, 3 position changed acturally, so you should be careful if two chiral center are adjacent when using CBP and GSR. </p>
 
 
 
 </p>
-
-         
-
-          <p>Placeholder text by
-            <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by
-            <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
         </div>
       </div>
     </div>
