--- a/post5.html
+++ b/post5.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>Quantao's Blog - Start Bootstrap Theme</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -62,8 +62,8 @@
             <h1>Get a Feel about Linux</h1>
             <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
             <span class="meta">Posted by
-              <a href="#">Start Bootstrap</a>
-              on August 24, 2019</span>
+              <a href="#">Quantao</a>
+              on December 03, 2020</span>
           </div>
         </div>
       </div>
@@ -75,19 +75,22 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>Get a feeling about Linux. 在linux中有多种语言环境可用，bash 是最简单明了的。也是大多数情况下默认的语言。
+          <p>Get a feeling about Linux. 在linux中有多种语言环境可用，bash 是最简单明了的。也是大多数情况下默认的语言。<p/>
 
-![](/images/a.png)
-![](/images/b.png)
-![](/images/c.png)
-![](/images/d.png)
-![](/images/e.png)
-</p>
+<a href="#">
+            <img class="img-fluid" src="img/a.png" alt="">
+            </a>
+<a href="#">
+            <img class="img-fluid" src="img/b.png" alt="">
+            </a>
+<a href="#">
+            <img class="img-fluid" src="img/c.png" alt="">
+            </a>
+<a href="#">
+            <img class="img-fluid" src="img/d.png" alt="">
+            </a>
 
-          
-          <p>Placeholder text by
-            <a href="http://spaceipsum.com/">Space Ipsum</a>. Photographs by
-            <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>.</p>
+
         </div>
       </div>
     </div>
