--- a/post2.html
+++ b/post2.html
@@ -79,32 +79,30 @@
 certain target of interest. For example, the current SARS-COV-2 relatied protein targets. However, for those chemists who just stepped into or try to step 
 into this zone, it is always good to be reminded that even you already defined rules like "rule of five" in the screening procedure, there are a class of 
 infamous compounds called "Pan-assay Inteference Compounds" or "PAINS" compunds, which has been found would be "postive" in many in vitro assays, but they are
-non-selective, binding to a lot protein targets. You want to remove these compounds at early stage of the drug development, before wasting a lot time and resources 
-on this "false posotive" hit.
+non-selective, binding to a lot protein targets. You want to remove these compounds at early stage of the drug development, before wasting a lot time and resources on this "false posotive" hit.<p/>
 
-But let first have a look at the good ones, based on a paper published in 2014, CHEMICAL NEWS
-The Most Common Heterocycles in Drugs, published in Science, by Derek Lowe, the top heterocycles appeared in FDA approved drugs are list as the next image, from 
-left to right, up to bottom.
+<p>But let first have a look at the good ones, based on a paper published in 2014, CHEMICAL NEWS
+The Most Common Heterocycles in Drugs, published in Science, by Derek Lowe, the top heterocycles appeared in FDA approved drugs are list as the next image, from left to right, up to bottom.</p>
 
-![](/images/blog5.1.png)
+<a href="#">
+            <img class="img-fluid" src="img/blog5.1.png" alt="">
+            </a>
 
-Now time for bad molecules, there are a lot, only several common ones listed as the next
+<p>Now time for bad molecules, there are a lot, only several common ones listed as the next<p/>
 
-![](/images/blog5.3.png)
+<a href="#">
+            <img class="img-fluid" src="img/blog5.3.png" alt="">
+            </a>
 
-If you want to know if a cetain compound of your interst is a PAINS compound, you could try https://www.cbligand.org/, but please be advised that the algorithun for
-filtering out PAINS in an ongoing program, there might be better web or software to do the similar thing. And always remember, the result is just an suggestion, you 
-need to make your own desicion to accept the result or not, after all, if you put some FDA drug, some algorithum gives you a PAIN as well.
-"A small proportion (ca. 5%) of FDA-approved drugs contain PAINS-recognized substructures, these comprising both natural products and synthetic drugs"—— ACS Chem Biol. 2018 Jan 19; 13(1): 36–44.
+<p>If you want to know if a cetain compound of your interst is a PAINS compound, you could try https://www.cbligand.org/, but please be advised that the algorithun for
+filtering out PAINS in an ongoing program, there might be better web or software to do the similar thing. And always remember, the result is just an suggestion, you need to make your own desicion to accept the result or not, after all, if you put some FDA drug, some algorithum gives you a PAIN as well.
+"A small proportion (ca. 5%) of FDA-approved drugs contain PAINS-recognized substructures, these comprising both natural products and synthetic drugs"—— ACS Chem Biol. 2018 Jan 19; 13(1): 36–44.</p>
 
-Several excellent articles can be read if you would more about PAINS, one is as above, the other is a blog from Derek Lowe again.  https://blogs.sciencemag.org/pipeline/archives/2010/02/08/polluting_the_literature_with_pains
+<p>Several excellent articles can be read if you would more about PAINS, one is as above, the other is a blog from Derek Lowe again.  https://blogs.sciencemag.org/pipeline/archives/2010/02/08/polluting_the_literature_with_pains
 
-And the relatied article the bolg has refered to, https://pubs.acs.org/doi/abs/10.1021/jm901137j
+And the relatied article the bolg has refered to, https://pubs.acs.org/doi/abs/10.1021/jm901137j</p>
 </p>
      
-        
-          <a href="#">
-            <img class="img-fluid" src="img/post-sample-image.jpg" alt="">
           </a>
           <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
         </div>
