asprin comand line split
asprin comand line split

--- a/post4.html
+++ b/post4.html
@@ -184,9 +184,9 @@ From the help message info, we know “chembl_t2m” is used for finding multipl
 Another example, imagin now you have a compound name "aspirin", you want to know the exact chembl ID
 
 try the following commamds
-<p>$touch aspirin.txt
-$echo asporin > aspirin.txt
-$chembl_ids -i aspirin.txt -o aspirin_id</p>
+<p>$touch aspirin.txt<p/>
+<p>$echo asporin > aspirin.txt<p/>
+<p>$chembl_ids -i aspirin.txt -o aspirin_id</p>
 
 <p>after finish, if you use "vi aspirin_id", you will see the chembl ID is CHEMBL25. In this simple case, the speed of using the web_client and the web browser seems not improved much, but imagin when you got a thousand molecule names, it is obviously will be easier with this web_client, what you need to do is putting all the names into a singel .txt, and you will get another .txt listed all the cheml IDs.</p>
 
