https added to my site
https added to my site

--- a/post1.html
+++ b/post1.html
@@ -167,7 +167,7 @@ For more reading about the Max Ring strategy, one can search the group page of R
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; quantaosun.github.io 2020</p>
+          <p class="copyright text-muted">Copyright &copy; https://quantaosun.github.io 2020</p>
         </div>
       </div>
     </div>
