--- a/post2.html
+++ b/post2.html
@@ -142,7 +142,7 @@ And the relatied article the bolg has refered to,
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; quantaosun.github.io 2020</p>
+          <p class="copyright text-muted">Copyright &copy; https://quantaosun.github.io 2020</p>
         </div>
       </div>
     </div>
