--- a/post4.html
+++ b/post4.html
@@ -244,7 +244,7 @@ the next image is the output listing a lot protein IDs asscociated with UniProt 
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; quantaosun.github.io 2020</p>
+          <p class="copyright text-muted">Copyright &copy; https://quantaosun.github.io 2020</p>
         </div>
       </div>
     </div>
