--- a/post6.html
+++ b/post6.html
@@ -255,7 +255,7 @@ By finishing this tutorial, the XLC and XLD relative binding free energy obtaine
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; quantaosun.github.io 2020</p>
+          <p class="copyright text-muted">Copyright &copy; https://quantaosun.github.io 2020</p>
         </div>
       </div>
     </div>
