--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          <p class="copyright text-muted">Copyright &copy; https://quantaosun.github.io 2020</p>
         </div>
       </div>
     </div>
