--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="about.html">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post7.html">Blog</a>
+            <a class="nav-link" href="index.html"s>Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact Me</a>
