--- a/about.html
+++ b/about.html
@@ -39,13 +39,13 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about.html">About Me</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="index.html">Blogs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact Me</a>
           </li>
         </ul>
       </div>
