wrong spelling corrected
Topics spelling corrected

--- a/post4.html
+++ b/post4.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Quantao's blog - Medicinal Chemistry Ropics</title>
+  <title>Quantao's blog - Medicinal Chemistry Topics</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
