--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
         <p>I am currently a PhD student majored in Chemistry, at <a href="https://www.unsw.edu.au/">University of New South Wales,Sydney</a> </p>
           
           <p>With a master's degree I worked in the new drug development department of a phamaceutical company based in Shanghai, China, from 2015 to 2017. </p>
-          <p>Then I moved to rsearch equipment sales sectro for a while from 2017-2018 in Shandong Province, China.<p/>
+          <p>Then I moved to rsearch equipment sales sector for a while from 2017-2018 in Shandong Province, China.<p/>
           <p>Since 2018 Ausgust, I move to Sydney, Australia, to continue my education,  to persue a PhD degree in Medicinal Chemistry.<p/>
           <p>For the future, I am going to  work in the phamaceutical industry or start as a entrepreneur in medicinal chemistry related sector</p>
       </div>
